--- a/style.css
+++ b/style.css
@@ -84,7 +84,9 @@ img{
 #check{
     display: inline-block;
 }
-@media (min-width: 600px){
-    .column {
-      width: 50%;
-    }}
+@media (min-width: 768px) {
+  form{
+    padding: 10px;
+  }
+ 
+}
